<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_contact_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_contact_search" />
    
    <item
        android:id="@+id/action_contact_group"
        android:icon="@drawable/ic_action_group"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_contact_group"/>
    
    <item
        android:id="@+id/action_contact_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_contact_more">
        <menu>
            <item
                android:id="@+id/action_contact_add"
                android:icon="@drawable/ic_action_add_person"
                android:orderInCategory="4"
                android:showAsAction="always"
                android:title="@string/action_contact_add"/>
            <!--  
            <item
                android:id="@+id/action_contact_random"
                android:icon="@drawable/ic_action_add_person"
                android:orderInCategory="5"
                android:showAsAction="always"
                android:title="@string/action_contact_random"/>
            -->
            <item
                android:id="@+id/action_contact_import"
                android:icon="@drawable/ic_action_import"
                android:orderInCategory="6"
                android:showAsAction="always"
                android:title="@string/action_contact_import"/>
            <item
                android:id="@+id/action_contact_clear"
                android:icon="@drawable/ic_action_content_discard"
                android:orderInCategory="7"
                android:showAsAction="always"
                android:title="@string/action_contact_clear"/>
        </menu>
    </item>

</menu>